--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
               <div class="hero">
                 <h1>Infuse your business with synergy</h1>
                 <h4>Acme automates your strategic marketing issues with a full suite of awesome, performance enhancing, turbo chargers!</h4>
+                <ul class="logos large-block-grid-4 small-block-grid-4 medium-block-grid-4">
+                  <li><h4>As seen on:</h4></li>
+                  <li><img src="img/press-logo-1.png"></li>
+                  <li><img src="img/press-logo-1.png"></li>
+                  <li><img src="img/press-logo-1.png"></li>
+                </ul>
+              </div>
+              <div class="main">
+                <h3>What we can do for you</h3>
+                <ul>
+                  <li>Some key benefit/feature that will blow peoples mind away in an easy to scan bullet point</li>
+                  <li>Another benefit or key feature that adds real value to this offering and make people even more prone to convert</li>
+                  <li>A last selling point that will close the deal and make everybody jump out their chairs to fill out the form</li>
+                </ul>
               </div>
             </div>
             <div class="large-5 columns">
@@ -86,6 +100,24 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="large-12 columns">
+            <blockquote class="testimonial">
+              <p class="blurb">Acme helped me optimize a whole new strategy for my cross-vertical, lead-gen campaign. They've been awesome and I'm totally a real customer.</p>
+              <cite>John Doe, Orwell Megacorp</cite>
+            </blockquote>
+          </div>
+        </div>
+
+        <footer class="text-center">
+          <div class="row">
+            <div class="large-12">
+              <div class="copyright">
+                &copy; Acme 2013
+              </div>
+            </div>
+          </div>
+        </footer>
         <script src="js/vendor/jquery.js"></script>
         <script src="js/app.js"></script>
     </body>
