--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
               <div class="hero">
                 <h1>Infuse your business with synergy</h1>
                 <h4>Acme automates your strategic marketing issues with a full suite of awesome, performance enhancing, turbo chargers!</h4>
-                <ul class="logos large-block-grid-4 small-block-grid-4 medium-block-grid-4">
+                <ul class="logos large-block-grid-3 small-block-grid-3 medium-block-grid-3">
                   <li><h4>As seen on:</h4></li>
-                  <li><img src="img/press-logo-1.png"></li>
-                  <li><img src="img/press-logo-1.png"></li>
-                  <li><img src="img/press-logo-1.png"></li>
+                  <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
+                  <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
                 </ul>
               </div>
               <div class="main">
