--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               <div class="main">
                 <h3>What we can do for you</h3>
                 <ul>
-                  <li>Some key benefit/feature that will blow peoples mind away in an easy to scan bullet point</li>
-                  <li>Another benefit or key feature that adds real value to this offering and make people even more prone to convert</li>
+                  <li>Some key benefit/feature that will blow peoples mind in an easy to scan bullet point</li>
+                  <li>Another benefit or key feature that adds real value to this offering and makes people even more prone to convert</li>
                   <li>A last selling point that will close the deal and make everybody jump out their chairs to fill out the form</li>
                 </ul>
               </div>
