example.com for webite placeholder

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <label for="company">Company</label>
                   </p>
                   <p class="inplace-label">
-                    <input id="website" type="url" name="website" placeholder="Company website" class="input">
+                    <input id="website" type="url" name="website" placeholder="example.com" class="input">
                     <label for="website">Website</label>
                   </p>
                   <div>
