--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <![endif]-->
         <header>
           <div class="row">
-            <div class="large-6 columns"><img src="img/logo.png" class="logo" alt="Logo"></div>
+            <div class="large-6 columns"><img src="img/logo-blue.png" class="logo" alt="Logo"></div>
             <div class="large-6 columns text-right"><h3 class="phone"><i class="icon-phone-sign"></i> (800) 000 0000</h3></div>
           </div>
         </header>
