--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
               <div class="hero">
                 <h1>Infuse your business with synergy</h1>
                 <h4>Acme automates your strategic marketing issues with a full suite of awesome, performance enhancing, turbo chargers!</h4>
-                <ul class="logos large-block-grid-3 small-block-grid-3 medium-block-grid-3">
-                  <li><h4>As seen on:</h4></li>
-                  <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
-                  <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
-                </ul>
               </div>
               <div class="main">
                 <h3>What we can do for you</h3>
@@ -101,10 +96,25 @@
         </div>
         <div class="row">
           <div class="large-12 columns">
-            <blockquote class="testimonial">
+            <blockquote class="testimonial text-center">
               <p class="blurb">Acme helped me optimize a whole new strategy for my cross-vertical, lead-gen campaign. They've been awesome and I'm totally a real customer.</p>
+              <div class="photo"><img src="img/testimonial.jpg"></div>
               <cite>John Doe, Orwell Megacorp</cite>
             </blockquote>
+          </div>
+        </div>
+
+        <div class="logos">
+          <div class="row">
+            <div class="large-12 columns">
+              <h5 class="text-center">Who's Talking About Us</h5>
+              <ul class="large-block-grid-4 small-block-grid-4 medium-block-grid-4">
+                <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
+                <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
+                <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
+                <li><img class="large-10 small-8" src="img/press-logo-1.png"></li>
+              </ul>
+            </div>
           </div>
         </div>
 
