Prototype of generic site editor

--- a/index.html
+++ b/index.html
@@ -129,5 +129,7 @@
         </footer>
         <script src="js/vendor/jquery.js"></script>
         <script src="js/app.js"></script>
+
+        <script src="js/editor.js"></script>
     </body>
 </html>
